# mcp-course

./: README.md  langchain_client.py  main.py  pyproject.toml
servers/: math_server.py  weather_server.py
