[project]
name = "mcp-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.0",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "python-dotenv>=1.2.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
